add photo of Bora Bora Landscape and blockquote testimonia

--- a/vacation-site/index.html
+++ b/vacation-site/index.html
@@ -8,10 +8,18 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Vacation Destination: Bora Bora</h1>
-      <h3>Ultimate paradise</h3>
+      <h2>Ultimate Paradise</h2>
   </div>
-
-
+  <h3>If you go to google and type in "paradise" and you think 'that can't be a real place, it's too beautiful'; you are likely looking at photos of Bora Bora. </h3>
+  <div class="picture">
+    <p>Don't just take our word for it- see for yourself</p>
+      <img src="vacation-site/pictures/bora.jpg" alt="A landscape photo of Bora Bora">
+  </div>
+  <h4>If that photo alone isn't enough to convince you, no worries, we've got testimonials from previous vistors to see the deal.</h4>
+  <blockquote class="blockquote"
+    <p>"this place is unreal. Truly, I never want to leave. I've never feel so at peace in my whole life and will definitely be back again someday"</p>
+    <footer class="blockquote-footer">Bob</footer>
+  
 
 </body>
 </html>
