add more divs to style testimonial

--- a/vacation-site/index.html
+++ b/vacation-site/index.html
@@ -17,8 +17,12 @@
   </div>
   <h4>If that photo alone isn't enough to convince you, no worries, we've got testimonials from previous vistors to see the deal.</h4>
   <blockquote class="blockquote">
-    <p>"this place is unreal. Truly, I never want to leave. I've never feel so at peace in my whole life and will definitely be back again someday"</p>
-    <footer class="blockquote-footer">Bob</footer>
+    <div class="container">
+      <div class="small">
+      <p>"this place is unreal. Truly, I never want to  leave. I've never feel so at peace in my whole   life and will definitely be back again someday"</p>
+      <footer class="blockquote-footer">Bob</footer>
+      </div>
+    </div>
   </blockquote>
 
 </body>
