add vacation packages content

--- a/vacation-site/index.html
+++ b/vacation-site/index.html
@@ -19,11 +19,20 @@
   <blockquote class="blockquote">
     <div class="container">
       <div class="small">
-      <p>"this place is unreal. Truly, I never want to  leave. I've never feel so at peace in my whole   life and will definitely be back again someday"</p>
+      <p>"this place is unreal. Truly, I never want to  leave. I've never feel so at peace in my whole life and will definitely be back again someday"</p>
       <footer class="blockquote-footer">Bob</footer>
       </div>
     </div>
   </blockquote>
-
+  <h5>Vacation Packages</h5>
+    <ol>  
+      <li>Basic 2-Adults Package</li>
+        <ul>
+          <li>2 adult roundtrip plane tickets</li>
+          <li>5 night stay in one of our king suites</li>
+          <li>Total cost: $3220</li>
+          <li>(only available during our off season:November - April)</li>
+        </ul>
+    </ol>
 </body>
 </html>
