add the remaining vacation packages and amenities

--- a/vacation-site/index.html
+++ b/vacation-site/index.html
@@ -33,6 +33,23 @@
           <li>Total cost: $3220</li>
           <li>(only available during our off season:November - April)</li>
         </ul>
+      <li>Silver Elite Package</li>
+        <ul>
+          <li>You choose: either 3-adult or 2-adult 2-children roundtrip plane tickets</li>
+          <li>5 night stay in one of our double-king suites equipt with a fully stocked minibar</li>
+          <li>Access to private beachfront(silver and gold package exclusive)</li>
+          <li>Total cost: $5500</li>
+          <li>Available year-round</li>
+        </ul>
+      <li>Gold Premium Package</li>
+        <ul>
+          <li>4-adult roundtrip plane tickets</li>
+          <li>7 night stay in 2 of our king suites equipt with a fully stocked minibar</li>
+          <li>Access to private beachfront(silver and gold package exclusive)</li>
+          <li>4 vouchers available to redeem one service of your choice at our medspa: 60 minute massage, facial, mani and pedi</li>
+          <li>Total cost: $8600</li>
+          <li>Available year-round</li>
+        </ul>
     </ol>
 </body>
 </html>
