--- a/vacation-site/index.html
+++ b/vacation-site/index.html
@@ -24,32 +24,36 @@
       </div>
     </div>
   </blockquote>
-  <h5>Vacation Packages</h5>
-    <ol>  
-      <li>Basic 2-Adults Package</li>
-        <ul>
-          <li>2 adult roundtrip plane tickets</li>
-          <li>5 night stay in one of our king suites</li>
-          <li>Total cost: $3220</li>
-          <li>(only available during our off season:November - April)</li>
-        </ul>
-      <li>Silver Elite Package</li>
-        <ul>
-          <li>You choose: either 3-adult or 2-adult 2-children roundtrip plane tickets</li>
-          <li>5 night stay in one of our double-king suites equipt with a fully stocked minibar</li>
-          <li>Access to private beachfront(silver and gold package exclusive)</li>
-          <li>Total cost: $5500</li>
-          <li>Available year-round</li>
-        </ul>
-      <li>Gold Premium Package</li>
-        <ul>
-          <li>4-adult roundtrip plane tickets</li>
-          <li>7 night stay in 2 of our king suites equipt with a fully stocked minibar</li>
-          <li>Access to private beachfront(silver and gold package exclusive)</li>
-          <li>4 vouchers available to redeem one service of your choice at our medspa: 60 minute massage, facial, mani and pedi</li>
-          <li>Total cost: $8600</li>
-          <li>Available year-round</li>
-        </ul>
-    </ol>
+  <h3>Vacation Packages</h3>
+</body>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+        <h5>Basic 2-Adults Package</h5>
+          <p>2 adult roundtrip plane tickets</p>
+          <p>5 night stay in one of our king suites</p>
+          <p>Total cost: $3220</p>
+          <p>(only available during our off season:November - April)</p>
+      </div>
+      <div class="col-4">
+        <h5>Silver Elite Package</h5>
+          <p>You choose: either 3-adult or 2-adult 2-children roundtrip plane tickets</p>
+          <p>5 night stay in one of our double-king suites equipt with a fully stocked minibar</p>
+          <p>Access to private beachfront(silver and gold package exclusive)</p>
+          <p>Total cost: $5500</p>
+          <p>Available year-round</p>
+      </div>
+      <div class="col-4">
+        <h5>Gold Premium Package</h5>
+          <p>4-adult roundtrip plane tickets</p>
+          <p>7 night stay in 2 of our king suites equipt with a fully stocked minibar</p>
+          <p>Access to private beachfront(silver and gold package exclusive)</p>
+          <p>4 vouchers available to redeem one service of your choice at our medspa: 60 minute massage, facial, mani and pedi</p>
+          <p>Total cost: $8600</p>
+          <p>Available year-round</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
