add box styling in html and css

--- a/vacation-site/index.html
+++ b/vacation-site/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Vacation Site</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="container">
@@ -30,28 +31,35 @@
   <div class="container">
     <div class="row">
       <div class="col-4">
-        <h5>Basic 2-Adults Package</h5>
-          <p>2 adult roundtrip plane tickets</p>
-          <p>5 night stay in one of our king suites</p>
-          <p>Total cost: $3220</p>
-          <p>(only available during our off season:November - April)</p>
+        <div class="box">
+          <h5>Basic 2-Adults Package</h5>
+            <p>2 adult roundtrip plane tickets</p>
+            <p>5 night stay in one of our king suites</p>
+            <p>Total cost: $3220</p>
+            <p>(only available during our off season:November - April)</p>
+        </div>
       </div>
-      <div class="col-4">
-        <h5>Silver Elite Package</h5>
-          <p>You choose: either 3-adult or 2-adult 2-children roundtrip plane tickets</p>
-          <p>5 night stay in one of our double-king suites equipt with a fully stocked minibar</p>
-          <p>Access to private beachfront(silver and gold package exclusive)</p>
-          <p>Total cost: $5500</p>
-          <p>Available year-round</p>
-      </div>
-      <div class="col-4">
-        <h5>Gold Premium Package</h5>
-          <p>4-adult roundtrip plane tickets</p>
-          <p>7 night stay in 2 of our king suites equipt with a fully stocked minibar</p>
-          <p>Access to private beachfront(silver and gold package exclusive)</p>
-          <p>4 vouchers available to redeem one service of your choice at our medspa: 60 minute massage, facial, mani and pedi</p>
-          <p>Total cost: $8600</p>
-          <p>Available year-round</p>
+        <div class="col-4">
+          <div class="box">
+            <h5>Silver Elite Package</h5>
+              <p>You choose: either 3-adult or 2-adult 2-children roundtrip plane tickets</p>
+              <p>5 night stay in one of our double-king suites equipt with a fully stocked minibar</p>
+              <p>Access to private beachfront(silver and gold package exclusive)</p>
+              <p>Total cost: $5500</p>
+              <p>Available year-round</p>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="box">
+            <h5>Gold Premium Package</h5>
+              <p>4-adult roundtrip plane tickets</p>
+              <p>7 night stay in 2 of our king suites equipt with a fully stocked minibar</p>
+              <p>Access to private beachfront(silver and gold package exclusive)</p>
+              <p>4 vouchers available to redeem one service of your choice at our medspa: 60 minute massage, facial, mani and pedi</p>
+              <p>Total cost: $8600</p>
+              <p>Available year-round</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
